tweaked layout to avoid cocktails and prev/next overlap

--- a/htdocs/t/ingredients.css
+++ b/htdocs/t/ingredients.css
@@ -45,11 +45,11 @@
 .ingredient-window .cocktail-list .next { top: 75px; }
 .ingredient-window .cocktail-list .prev { left: 15px; }
 .ingredient-window .cocktail-list .next { right: 15px; }
-.ingredient-window .cocktail-list .viewport { width: 650px; height: 123px; margin: 0 auto;  position: relative; overflow: hidden; }
+.ingredient-window .cocktail-list .viewport { width: 625px; height: 123px; margin: 0 auto;  position: relative; overflow: hidden; }
 .ingredient-window .cocktail-list .viewport .surface { width: 10000px; }
-.ingredient-window .cocktail-list .point { float: left; width: 650px;  }
+.ingredient-window .cocktail-list .point { float: left; width: 625px;  }
 
-.cocktail-preview { width: 130px; float: left; text-align: center; font-size: 12px;  }
+.cocktail-preview { width: 125px; float: left; text-align: center; font-size: 12px;  }
 .cocktail-preview .image { display: block; margin: 0 auto 5px;  }
 
 <!--# include virtual="popup.css" -->
